--- a/shared/codestream-configs/package.json
+++ b/shared/codestream-configs/package.json
@@ -24,5 +24,8 @@
     "eslint-plugin-promise": "^4.1.1",
     "eslint-plugin-react": "^7.13.0",
     "eslint-plugin-standard": "^4.0.0"
+  },
+  "dependencies": {
+    "hjson": "^3.1.2"
   }
 }
