running npm install for submodules

--- a/sandbox/playgrounds/default.template
+++ b/sandbox/playgrounds/default.template
@@ -1,7 +1,7 @@
 
 #desc# All services for codestream backend development
 
-#playgroundName# csmono
+#playgroundName# csbe
 #sandboxTypes# mongo,cs_server
 #sandboxes# {{SBNAME_mongo}},{{SBNAME_cs_server}}
 #environment# local
@@ -16,8 +16,8 @@ fi
 cd $CSBE_TOP
 
 # uncomment these if you use iterm2 and want to colorize your tabs
-# . $DT_TOP/lib/iterm2-utils.sh
-# it2_tab_rgb `basename ${BASH_SOURCE[0]}` 200 88 45
+. $DT_TOP/lib/iterm2-utils.sh
+it2_tab_rgb `basename ${BASH_SOURCE[0]}` 200 198 45
 
 echo "
 Use the 'cs_api-cloud-services' init script to control all services at once.
